--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "redis": "^4.6.13"
+    "redis": "^4.6.13",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
