--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "modiriat-frontend",
   "version": "1.0.0",
@@ -9,21 +8,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/vazirmatn": "^5.0.0",
+    "@google/genai": "*",
+    "lucide-react": "^0.330.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "lucide-react": "^0.330.0",
-    "@google/genai": "*",
-    "@fontsource/vazirmatn": "^5.0.0"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.0"
   }
 }
